# my-assistant

./: README.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: build.yml
components/ui/: carousel.tsx
src/: App.css  App.tsx  Container.tsx  Swipe.tsx  TestContainer.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/db/: 000_init.sql
src-tauri/src/: database.rs  main.rs
src-tauri/src/database/: data.rs  github.rs  mod.rs  project.rs  task.rs  time.rs
src-tauri/src/features/: mod.rs
src/components/: Keyboard.tsx
src/features/: DebugComponent.tsx  SwipeComponent.tsx
src/features/calculator/components/: CalcuCard.tsx
src/features/calculator/components/element/: Keyboard.tsx  MemoryNumber.tsx  NumberKeyboard.tsx  ResetKeyboard.tsx  SymbolKeyboard.tsx
src/features/calculator/funcs/: CalcKeyAction.tsx  KeybordAction.tsx
src/features/swipeWindow/: Swipe.tsx
src/features/swipeWindow/components/: NavCard.tsx
src/features/task/components/: Green.tsx  InputUrl.tsx  Stamp.tsx  Task.tsx  WeeklyGrass .tsx
src/features/task/components/stamps/: ColumnStamps.tsx  DeepStamp.tsx  MiddleStapm.tsx  NilStamp.tsx  ShallowStapm.tsx  StapmHoverWindow.tsx
src/features/timememo/: AddTitleModal.tsx  TimememoCard.tsx  TimerLog.tsx
src/features/timememo/components/: TimeHist.tsx  TimememoCard.tsx
src/features/timememo/components/element/: AddTaskModal.tsx  AddTitleModal.tsx  Task.tsx  TimeHist.tsx  (+3 more)
src/test/: Swipe.tsx  Test1.tsx  Test2.tsx  Test3.tsx  TestContainer.tsx
src/types/: timeMemo.ts
